@@ -93,6 +93,7 @@ Additions:
     * ecore_imf: 
      - Add ecore_imf_context_input_panel_layout_variation_set/get API
      - Add ecore_imf_input_panel_hide API
+     - Add ecore_imf_context_input_panel_event_callback_call, clear API
     * Add edje_object_part_text_input_panel_layout_variation_set/get API
     * Evil:
      - Add mkdtemp.
